--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="last-con">
         <span>HOPE YOU CAN MAKE IT!</span><br>
         <span>Kindly Respond By January, 2025</span>
-    </div>
+    <!-- </div> -->
     <div class="rsvp-con">
         <span>RSVP</span>
     </div>
